add one more test that styx overrides others